# serializer version: 1
# name: TestDatabase.test_database_warehouse_joins_persons_poe_v2
  'SELECT events__some_field.key AS key FROM events LEFT JOIN (SELECT groups.key AS key, key AS events__some_field___key FROM (SELECT groups.group_type_index AS index, groups.group_key AS key FROM groups WHERE equals(groups.team_id, 229) GROUP BY groups.group_type_index, groups.group_key) AS groups) AS events__some_field ON equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_0)s), \'\'), \'null\'), \'^"|"$\', \'\'), events__some_field.events__some_field___key) WHERE equals(events.team_id, 229) LIMIT 10000'
# ---
# name: TestDatabase.test_serialize_database_no_person_on_events
  '''
  {
      "events": [
          {
              "key": "uuid",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "event",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "json",
              "schema_valid": true
          },
          {
              "key": "timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "elements_chain",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "$session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$window_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_0",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_0",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_1",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_1",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_2",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_2",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_3",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_3",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_4",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_4",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "session",
              "type": "lazy_table",
              "table": "sessions",
              "fields": [
                  "id",
                  "session_id",
                  "team_id",
                  "distinct_id",
                  "$start_timestamp",
                  "$end_timestamp",
                  "$urls",
                  "$entry_current_url",
                  "$entry_pathname",
                  "$exit_current_url",
                  "$exit_pathname",
                  "$entry_utm_source",
                  "$entry_utm_campaign",
                  "$entry_utm_medium",
                  "$entry_utm_term",
                  "$entry_utm_content",
                  "$entry_referring_domain",
                  "$entry_gclid",
                  "$entry_gad_source",
                  "$event_count_map",
                  "$pageview_count",
                  "$autocapture_count",
                  "$channel_type",
                  "$session_duration",
                  "duration",
                  "$is_bounce"
              ],
              "schema_valid": true
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "key",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "updated_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "json",
              "schema_valid": true
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "json",
              "schema_valid": true
          },
          {
              "key": "is_identified",
              "type": "boolean",
              "schema_valid": true
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ],
              "schema_valid": true
          },
          {
              "key": "$virt_initial_referring_domain_type",
              "type": "expression",
              "schema_valid": true
          },
          {
              "key": "$virt_initial_channel_type",
              "type": "expression",
              "schema_valid": true
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ],
              "schema_valid": true
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "override_person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "oldest_event",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "merged_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "first_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "click_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "keypress_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "mouse_activity_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "active_milliseconds",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "console_log_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "console_warn_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "console_error_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "size",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "event_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "message_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "events",
              "type": "lazy_table",
              "table": "events",
              "fields": [
                  "uuid",
                  "event",
                  "properties",
                  "timestamp",
                  "team_id",
                  "distinct_id",
                  "elements_chain",
                  "created_at",
                  "$session_id",
                  "$window_id",
                  "pdi",
                  "poe",
                  "goe_0",
                  "goe_1",
                  "goe_2",
                  "goe_3",
                  "goe_4",
                  "person",
                  "person_id",
                  "$group_0",
                  "group_0",
                  "$group_1",
                  "group_1",
                  "$group_2",
                  "group_2",
                  "$group_3",
                  "group_3",
                  "$group_4",
                  "group_4",
                  "session"
              ],
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "field_traverser",
              "chain": [
                  "events",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "console_logs",
              "type": "lazy_table",
              "table": "console_logs_log_entries",
              "fields": [
                  "team_id",
                  "log_source",
                  "log_source_id",
                  "instance_id",
                  "timestamp",
                  "message",
                  "level"
              ],
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ],
              "schema_valid": true
          },
          {
              "key": "start_time",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "end_time",
              "type": "datetime",
              "schema_valid": true
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "cohort_id",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ],
              "schema_valid": true
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "cohort_id",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ],
              "schema_valid": true
          }
      ],
      "log_entries": [
          {
              "key": "log_source",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "log_source_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "instance_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "message",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "level",
              "type": "string",
              "schema_valid": true
          }
      ],
      "sessions": [
          {
              "key": "id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$start_timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "$end_timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "$urls",
              "type": "array",
              "schema_valid": true
          },
          {
              "key": "$entry_current_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_pathname",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$exit_current_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$exit_pathname",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_source",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_campaign",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_medium",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_term",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_content",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_referring_domain",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_gclid",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_gad_source",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$pageview_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "$autocapture_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "$channel_type",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$session_duration",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "duration",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "$is_bounce",
              "type": "boolean",
              "schema_valid": true
          }
      ],
      "heatmaps": [
          {
              "key": "session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "x",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "y",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "scale_factor",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "viewport_width",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "viewport_height",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "pointer_target_fixed",
              "type": "boolean",
              "schema_valid": true
          },
          {
              "key": "current_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "type",
              "type": "string",
              "schema_valid": true
          }
      ]
  }
  '''
# ---
# name: TestDatabase.test_serialize_database_with_person_on_events_enabled
  '''
  {
      "events": [
          {
              "key": "uuid",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "event",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "json",
              "schema_valid": true
          },
          {
              "key": "timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "elements_chain",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "$session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$window_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "poe"
              ],
              "schema_valid": true
          },
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$group_0",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_0",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_1",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_1",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_2",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_2",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_3",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_3",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "$group_4",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "group_4",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "session",
              "type": "lazy_table",
              "table": "sessions",
              "fields": [
                  "id",
                  "session_id",
                  "team_id",
                  "distinct_id",
                  "$start_timestamp",
                  "$end_timestamp",
                  "$urls",
                  "$entry_current_url",
                  "$entry_pathname",
                  "$exit_current_url",
                  "$exit_pathname",
                  "$entry_utm_source",
                  "$entry_utm_campaign",
                  "$entry_utm_medium",
                  "$entry_utm_term",
                  "$entry_utm_content",
                  "$entry_referring_domain",
                  "$entry_gclid",
                  "$entry_gad_source",
                  "$event_count_map",
                  "$pageview_count",
                  "$autocapture_count",
                  "$channel_type",
                  "$session_duration",
                  "duration",
                  "$is_bounce"
              ],
              "schema_valid": true
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "key",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "updated_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "json",
              "schema_valid": true
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "json",
              "schema_valid": true
          },
          {
              "key": "is_identified",
              "type": "boolean",
              "schema_valid": true
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ],
              "schema_valid": true
          },
          {
              "key": "$virt_initial_referring_domain_type",
              "type": "expression",
              "schema_valid": true
          },
          {
              "key": "$virt_initial_channel_type",
              "type": "expression",
              "schema_valid": true
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ],
              "schema_valid": true
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "override_person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "oldest_event",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "merged_at",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "created_at",
              "type": "datetime",
              "schema_valid": true
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "first_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "click_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "keypress_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "mouse_activity_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "active_milliseconds",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "console_log_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "console_warn_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "console_error_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "size",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "event_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "message_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "events",
              "type": "lazy_table",
              "table": "events",
              "fields": [
                  "uuid",
                  "event",
                  "properties",
                  "timestamp",
                  "team_id",
                  "distinct_id",
                  "elements_chain",
                  "created_at",
                  "$session_id",
                  "$window_id",
                  "pdi",
                  "poe",
                  "goe_0",
                  "goe_1",
                  "goe_2",
                  "goe_3",
                  "goe_4",
                  "person",
                  "person_id",
                  "$group_0",
                  "group_0",
                  "$group_1",
                  "group_1",
                  "$group_2",
                  "group_2",
                  "$group_3",
                  "group_3",
                  "$group_4",
                  "group_4",
                  "session"
              ],
              "schema_valid": true
          },
          {
              "key": "properties",
              "type": "field_traverser",
              "chain": [
                  "events",
                  "properties"
              ],
              "schema_valid": true
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "console_logs",
              "type": "lazy_table",
              "table": "console_logs_log_entries",
              "fields": [
                  "team_id",
                  "log_source",
                  "log_source_id",
                  "instance_id",
                  "timestamp",
                  "message",
                  "level"
              ],
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ],
              "schema_valid": true
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ],
              "schema_valid": true
          },
          {
              "key": "start_time",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "end_time",
              "type": "datetime",
              "schema_valid": true
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "cohort_id",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ],
              "schema_valid": true
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "cohort_id",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ],
              "schema_valid": true
          }
      ],
      "log_entries": [
          {
              "key": "log_source",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "log_source_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "instance_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "message",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "level",
              "type": "string",
              "schema_valid": true
          }
      ],
      "sessions": [
          {
              "key": "id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$start_timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "$end_timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "$urls",
              "type": "array",
              "schema_valid": true
          },
          {
              "key": "$entry_current_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_pathname",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$exit_current_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$exit_pathname",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_source",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_campaign",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_medium",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_term",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_utm_content",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_referring_domain",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_gclid",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$entry_gad_source",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$pageview_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "$autocapture_count",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "$channel_type",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "$session_duration",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "duration",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "$is_bounce",
              "type": "boolean",
              "schema_valid": true
          }
      ],
      "heatmaps": [
          {
              "key": "session_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "distinct_id",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "x",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "y",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "scale_factor",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "viewport_width",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "viewport_height",
              "type": "integer",
              "schema_valid": true
          },
          {
              "key": "pointer_target_fixed",
              "type": "boolean",
              "schema_valid": true
          },
          {
              "key": "current_url",
              "type": "string",
              "schema_valid": true
          },
          {
              "key": "timestamp",
              "type": "datetime",
              "schema_valid": true
          },
          {
              "key": "type",
              "type": "string",
              "schema_valid": true
          }
      ]
  }
  '''
# ---
